fix(switch): indicator overflowed when activated
When `el-switch` was turned on, the `left` value will be set to `100%`, so the rounded indicator went outside the switch box.
Fixed it by changing `left: 100%` to `left: calc(100% - var(--el-switch-button-size))`.

--- a/packages/theme-chalk/src/switch.scss
+++ b/packages/theme-chalk/src/switch.scss
@@ -98,7 +98,7 @@
       border-color: var(--el-switch-on-color);
       background-color: var(--el-switch-on-color);
       .#{$namespace}-switch__action {
-        left: 100%;
+        left: calc(100% - var(--el-switch-button-size));
         margin-left: calc(0px - var(--el-switch-button-size) - 1px);
         color: var(--el-switch-on-color);
       }
